package de.dhbw.model.train;

public class FreightWagon extends BaseWagon {
}
